--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EMIBudget">
+        <activity android:name=".BalanceActivity" />
+        <activity android:name=".IncomeExpensesActivity" />
+        <activity android:name=".EmiActivity" />
         <activity
             android:name=".MainActivity"
-            android:name=".BalanceActivity"
-            android:name=".EmiActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.EMIBudget">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
